Pikmin 2 and links

--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -17,6 +17,26 @@
 </p>
 <p id="#sentinel">
 <table style="table-layout: fixed">
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://blog.nataliethenerd.com/i-turned-the-lego-game-boy-into-a-working-game-boy-part-1">Working Lego Game Boy</a>” by Natalie the Nerd</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://whatpwacando.today">What can Progressive Web Apps do today?</a>”</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://altstore.io">AltStore</a>”</td></tr>
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://www.jofamo.com/blog/secrets-of-the-pocket-camera">Secrets of the Pocket Camera</a>” by Jonathan Traynor</td></tr>
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://consumed.today">consumed.today</a>”</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.youtube.com/watch?v=ZUX3z-7u7Ak">We can't keep doing this...</a>”</td></tr>
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://fliiipbook.com">FliiipBook</a>”</td></tr>
+<tr><td title="Social Media">📱</td><td>“<a href="https://conversational-leadership.net/echo-chambers-filter-bubbles">Filter bubbles, epistemic bubbles and echo chambers</a>”</td></tr>
+<tr><td title="Security">🔒</td><td>“<a href="https://sigh.dev/posts/ctrl-tinycolor-post-mortem">@ctrl/tinycolor supply-chain attack post-mortem</a>”</td></tr>
+<tr><td title="Social Media">📱</td><td>“<a href="https://windowsread.me/p/best-youtube-downloaders">Best YouTube downloaders</a>”</td></tr>
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://unscreenshottable.vercel.app/?text=Hello">You can't screenshot this</a>”</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://hunter-r.com/ac-letter-scorer">Animal Crossing letter scorer</a>”</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://hushcrasher.substack.com/p/taxonomy-of-games">By the way, what’s a AA game?</a>”</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://www.math.columbia.edu/~woit/wordpress/?p=15206">Epistemic collapse at the WSJ</a>”</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://arstechnica.com/gaming/2025/09/all-54-lost-clickwheel-ipod-games-have-now-been-preserved-for-posterity">Preservation of all 54 clickwheel iPod games</a>”</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://30fps.net/pages/perceptual-pico8-pixel-mapping">Perceptually mapping to the PICO-8 palette</a>”</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://nytpu.com/misc/nintendo-e-reader">Nintendo e-Reader API</a>”</td></tr>
+<tr><td title="Social Media">📱</td><td>“<a href="https://www.thenexus.media/tiktok-won-now-everything-is-60-seconds">TikTok won, now everything is 60 seconds</a>”</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.youtube.com/watch?v=VN3hqk34sGg">Turn your Game Boy Advance into a Switch 2 controller</a>”</td></tr>
+<tr><td title="Security">🔒</td><td>“<a href="https://cryptography.dog/blog/back-to-watering-holes">Supply chains and watering holes</a>”</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://fershad.com/writing/making-this-website-grid-aware">Website optimizing for renewable energy</a>”</td></tr>
 <tr><td title="Life">🏞️</td><td>“<a href="https://taylor.town/type-of-person">I'm the type of person who...</a>” by Taylor</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://addinbox.sakura.ne.jp/holiday_logic_English.htm">Japanese holidays encoded in software</a>”</td></tr>
@@ -189,7 +209,6 @@
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://lmnt.me/blog/the-most-mario-colors.html">The most Mario colors</a>” by Louie Mantia</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://jon.work/og">File systems: the original hypermedia</a>” by Jon Secchis</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="http://simplecpudesign.com">Simple CPU design</a>”</td></tr>
-<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.jofamo.com/blog/secrets-of-the-pocket-camera">Secrets of the Pocket Camera</a>” by Jonathan Traynor</td></tr>
 <tr><td title="Social Media">📱</td><td>“<a href="https://retro.social/@ifixcoinops/113838462085835742">Sending data between two phones</a>”</td></tr>
 <tr><td title="Social Media">📱</td><td>“<a href="https://pudding.cool/2023/09/invisible-epidemic">Loneliness epidemic</a>” by Alvin Chang</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://www.vintagecomputing.com/index.php/archives/3292/the-pc-is-dead-its-time-to-make-computing-personal-again">Personal computing is dead</a>” by Benj Edwards</td></tr>
