--- a/app/static/style.css
+++ b/app/static/style.css
@@ -77,6 +77,7 @@ table {
   margin: 0;
   margin-bottom: 1.5em;
   background-color: #e9e9e9;
+  font-variant-numeric: tabular-nums;
 }
 tbody {
   background-color: #ffffff;
