Fix my Nintendo FC

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -9,7 +9,7 @@
                 at the Python Software Foundation working to improve the security posture of the Python ecosystem.
             </p>
             <p>
-                I enjoy writing about software on my blog. <nobr>I maintain a few</nobr> open source projects
+                I enjoy writing about software and retro-gaming on my blog. <nobr>I maintain a few</nobr> open source projects
                 including urllib3 and truststore.
             </p>
         </div>
@@ -36,7 +36,7 @@
             <div><a href="https://bsky.app/profile/sethmlarson.dev" target="_blank" rel="me noopener noreferrer">sethmlarson.dev</a></div>
             <div><a href="https://github.com/sethmlarson" target="_blank" rel="me noopener noreferrer">sethmlarson</a></div>
             <div><a href="https://discord.com/users/481989102951202817" target="_blank" rel="noopener noreferrer">sethmlarson</a></div>
-            <div style="font-variant-numeric: tabular-nums;">SW‑8451‑2568‑2605</div>
+            <div style="font-variant-numeric: tabular-nums;">SW‑7757‑6777‑0188</div>
             <div><a href="https://linkedin.com/in/sethmlarson/" target="_blank" rel="noopener noreferrer">sethmlarson</a></div>
             <hr>
             <div>sethmlarson</div>
