--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -39,10 +39,8 @@
         <nobr>
           <a href="{{ url_for('list_blog_posts') }}">Blog</a> :
           <a href="{{ url_for('about') }}">About</a> :
-          <a href="{{ url_for('links') }}">Links</a> :
           <a href="{{ url_for('rss_blog_posts') }}">RSS</a> :
-          <a href="https://mastodon.social/@sethmlarson" target="_blank">Mastodon</a> :
-          <a href="mailto:sethmichaellarson@gmail.com" target="_blank">Email</a>
+          <a href="{{ url_for('links') }}">Blogroll</a>
         </nobr>
     </div>
   </div>
