--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -1,13 +1,12 @@
 {% extends "base.html" %}
-{% block title %}Reblogs — Seth Larson{% endblock %}
+{% block title %}Blogroll — Seth Larson{% endblock %}
 {% block header %}
-<h1>Reblogs (aka: cool stuff on the internet)</h1>
+<h1>Blogroll</h1>
 {% endblock %}
 {% block content %}
 <p>
-    Reblogs are <a href="https://sethmlarson.dev/reblog-tweet-toot-skoot-skeet">what we had before retweets and boosts</a>.
+    <a href="https://sethmlarson.dev/reblog-tweet-toot-skoot-skeet">Blogrolls and reblogs</a> are what we had before retweets and boosts.
     This is a list of links to stuff on the internet that I enjoyed and want to share with others.
-    You can <a href="{{ url_for('reblogs_feed') }}">subscribe via RSS</a> for regular updates.
 </p>
 <p>
     Additionally, I share all the
