--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% block title %}Blogroll — Seth Larson{% endblock %}
 {% block header %}
-<h1>Blogroll</h1>
 {% endblock %}
 {% block content %}
 <p>
@@ -17,6 +16,14 @@
 </p>
 <p id="#sentinel">
 <table style="table-layout: fixed">
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://stickertop.art/main">Main</a>”</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://suedbynintendo.com">Sued by Nintendo</a>”</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://the-decenter.ghost.io/calling-all-technologists-the-era-of-neutrality-is-over">Calling All Technologists: The Era of Neutrality Is Over</a>”</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.thrillingtalesofoldvideogames.com/blog/mario-death-animation-origin">The Origin of Mario’s Trademark Death Animation</a>”</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://blog.tomayac.com/2025/11/07/using-the-web-monetization-api-for-fun-and-profit">Using the Web Monetization API for fun and profit</a>”</td></tr>
+<tr><td title="Social Media">📱</td><td>“<a href="https://werd.io/why-the-open-social-web-matters-now">Why the open social web matters now</a>”</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://nbd.neocities.org/slidepresentation/Slide%20presentation%20about%20slides">https://nbd.neocities.org/slidepresentation/Slide%20presentation%20about%20slides</a>”</td></tr>
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://searchicality.com">Home - Good Mythical Searching</a>”</td></tr>
 <tr><td title="Life">🏞️</td><td>“<a href="https://www.theparisreview.org/blog/2025/10/29/truck-desk">My Truck Desk</a>” by Bud Smith</td></tr>
 <tr><td title="Toys and Art">🖼️</td><td>“<a href="https://visualrambling.space/dithering-part-1">Dithering</a>”</td></tr>
 <tr><td title="Life">🏞️</td><td>“<a href="https://dansinker.com/posts/2025-10-24-understand">What I need you to understand about Chicago</a>” by Dan Sinker</td></tr>
