--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -16,6 +16,19 @@
 </p>
 <p id="#sentinel">
 <table style="table-layout: fixed">
+<tr><td title="Life">🏞️</td><td>“<a href="https://dansinker.com/posts/2025-11-21-whistle-up">Whistle up!</a>” by Dan Sinker</td></tr>
+<tr><td title="Security">🔒</td><td>“<a href="https://blog.yossarian.net/2025/11/21/We-should-all-be-using-dependency-cooldowns">Dependency cooldowns</a>” by William Woodruff</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://ochagavia.nl/blog/towards-interplanetary-quic-traffic">Interplanetary QUIC</a>” by Adolfo Ochagavía</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://tonsky.me/blog/needy-programs">Needy programs</a>” by Nikita Prokopov</td></tr>
+<tr><td title="Social Media">📱</td><td>“<a href="https://unpublishablepapers.substack.com/p/where-do-the-children-play">Where do the children play?</a>” by Eli Stark-Elster</td></tr>
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://2earth.github.io/website/20250202.html">Drawing celtic knots with Python</a>” by Tom Ruddell</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://filiph.github.io/unsure">Uncertainty calculator</a>” by Filip Hráček</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://nolanlawson.com/2025/11/16/the-fate-of-small-open-source">The fate of small open source</a>” by Nolan Lawson</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://nesbitt.io/2025/11/15/package-manager-timeline.html">Package manager timeline</a>” by Andrew Nesbitt</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://blog.muni.town/open-source-power">Open source power</a>” by Erlend Sogge Heggen</td></tr>
+<tr><td title="Security">🔒</td><td>“<a href="https://moxie.org/2015/02/24/gpg-and-me.html">GPG and me</a>” by Moxie Marlinspike</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://blog.kagi.com/slopstop">SlopStop</a>” by Kagi</td></tr>
+<tr><td title="Security">🔒</td><td>“<a href="https://techcrunch.com/2025/11/10/why-a-lot-of-people-are-getting-hacked-with-government-spyware">More people targeted with government spyware</a>” by Lorenzo Franceschi-Bicchierai</td></tr>
 <tr><td title="Toys and Art">🖼️</td><td>“<a href="https://stickertop.art/main">Stickers on laptops</a>”</td></tr>
 <tr><td title="Life">🏞️</td><td>“<a href="https://suedbynintendo.com">Sued by Nintendo</a>”</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://the-decenter.ghost.io/calling-all-technologists-the-era-of-neutrality-is-over">Era of neutrality is over for technologists</a>”</td></tr>
