--- a/app/static/style.css
+++ b/app/static/style.css
@@ -52,6 +52,7 @@ body {
 
 a {
   color: #0000ff;
+  background-color: rgba(0,0,255,0.07);
   text-decoration: underline;
   text-decoration-line: underline;
   text-decoration-thickness: 2px;
@@ -63,6 +64,7 @@ a > code {
 a[href^=tel]{ color:#000; text-decoration:none}
 a:hover {
   color: #ff00ff !important;
+  background-color: rgba(255,0,255,0.07);
 }
 
 table {
