--- a/app/templates/blog-posts.html
+++ b/app/templates/blog-posts.html
@@ -7,7 +7,7 @@
         {% if bp.slug not in hide_posts %}
         {% if bp.more %}
         <blockquote style="overflow: hidden">
-            <a href="{{ url_for('get_blog_post', blog_post=bp.slug) }}" style="color: #000;"><strong style="text-decoration: underline; text-decoration-thickness: 2px;">{{ bp.title }}</strong></a><br>
+            <a href="{{ url_for('get_blog_post', blog_post=bp.slug) }}" style="color: #000; background-color: rgba(0,0,0,0);"><strong style="text-decoration: underline; text-decoration-thickness: 2px;">{{ bp.title }}</strong></a><br>
             <br>{{ bp.more | safe }}
         </blockquote>
         {% else %}
