--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,6 @@
     <meta name="keywords" content="python pypi open source maintainer urllib3 requests http networking security oss">
     <meta name="author" content="Seth Michael Larson">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="format-detection" content="telephone=no"/>
     <meta name="fediverse:creator" content="@sethmlarson@mastodon.social"/>
     <meta name="fediverse:creator" content="@sethmlarson@fosstodon.org"/>
     <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="{{ url_for('rss_blog_posts') }}"/>
@@ -16,7 +15,11 @@
     <link rel="preconnect" href="https://rsms.me/">
     <link rel="stylesheet" href="/static/style.css">
     <link rel="webmention" href="https://webmention.io/sethmlarson.dev/webmention" />
+    {% if html_head %}
     {{ html_head | safe }}
+    {% else %}
+    <meta name="format-detection" content="telephone=no"/>
+    {% endif %}
 {% block opengraph %}
     <meta property="og:site_name" content="sethmlarson.dev"/>
     <meta property="og:author" content="Seth Michael Larson"/>
