One weird trick

--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -16,6 +16,10 @@
 </p>
 <p id="#sentinel">
 <table style="table-layout: fixed">
+<tr><td title="Social Media">📱</td><td>“<a href="https://spui25.nl/programma/we-can-change-the-defaults-building-networks-of-consent-and-spaces-of-joy-in-the-ruins-of-social-media">Social media: we can change the defaults</a>” by Christine Lemmer-Webber</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://blog.calebjay.com/posts/dont-download-apps">Don't download apps</a>” by Caleb Jay</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://adrianhoward.com/posts/bad-people-do-the-thing-you-love">Bad people do the thing you love</a>” by Adrian Howard</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://en.wikipedia.org/wiki/Magnetic_ink_character_recognition">Magnetic ink character recognition</a>”</td></tr>
 <tr><td title="Life">🏞️</td><td>“<a href="https://dansinker.com/posts/2025-11-21-whistle-up">Whistle up!</a>” by Dan Sinker</td></tr>
 <tr><td title="Security">🔒</td><td>“<a href="https://blog.yossarian.net/2025/11/21/We-should-all-be-using-dependency-cooldowns">Dependency cooldowns</a>” by William Woodruff</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://ochagavia.nl/blog/towards-interplanetary-quic-traffic">Interplanetary QUIC</a>” by Adolfo Ochagavía</td></tr>
