Nintendo Switch Play Activity OCR

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -9,7 +9,7 @@
                 at the Python Software Foundation working to improve the security posture of the Python ecosystem.
             </p>
             <p>
-                I enjoy writing about software and retro-gaming on my blog. <nobr>I maintain a few</nobr> open source projects
+                I enjoy blogging about software, security, and retro video-games. <nobr>I maintain a few</nobr> open source projects
                 including urllib3 and truststore.
             </p>
         </div>
