--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -16,6 +16,7 @@
 </p>
 <p id="#sentinel">
 <table style="table-layout: fixed">
+<tr><td title="Social Media">📱</td><td>“<a href="https://berjon.com/fascintern-media">Fascintern media</a>” by Robin Berjon</td></tr>
 <tr><td title="Social Media">📱</td><td>“<a href="https://spui25.nl/programma/we-can-change-the-defaults-building-networks-of-consent-and-spaces-of-joy-in-the-ruins-of-social-media">Social media: we can change the defaults</a>” by Christine Lemmer-Webber</td></tr>
 <tr><td title="Life">🏞️</td><td>“<a href="https://blog.calebjay.com/posts/dont-download-apps">Don't download apps</a>” by Caleb Jay</td></tr>
 <tr><td title="Life">🏞️</td><td>“<a href="https://adrianhoward.com/posts/bad-people-do-the-thing-you-love">Bad people do the thing you love</a>” by Adrian Howard</td></tr>
@@ -335,8 +336,8 @@
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://gamebanana.com/mods/544238">Super Mario 64 in Sonic Adventure DX</a>” by Sora</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.youtube.com/watch?v=1-LWI2tGfhQ">FlippyDrive for the GameCube</a>” by Macho Nacho</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://fabiensanglard.net/snes_video/index.html">Super Nintendo Video System</a>” by Fabien Sanglard</td></tr>
-<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://youtu.be/nviIKTywuYU?si=mgFOhNBRMCTAIwOU">A video about Melee</a>” by AsumSaus</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://youtube.com/watch?si=BDytOgheHFncVBK9&v=tfS9SYPT-jw">Super Paper Mario's design</a>” by Kirbyster</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://youtu.be/nviIKTywuYU?si=mgFOhNBRMCTAIwOU">A video about Melee</a>” by AsumSaus</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://orangegb.com/orangefm">ORANGE FM, Game Boy cartridge for FM Radio</a>” by Evan Barger</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="http://www.blarg.ca/2021/02/15/using-a-gamecube-ascii-keyboard-controller-with-libogc">Gamecube ASCII keyboard controller and libogc</a>” by Gered King</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.youtube.com/watch?v=699HVbOKNtc">GameCube, Wii, Wii U, and PC connected via Broadband Adapter</a>” by Good Vibes Gaming</td></tr>
