--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -16,7 +16,15 @@
 </p>
 <p id="#sentinel">
 <table style="table-layout: fixed">
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://www.citymilk.net">Japanese milk packaging (漂流乳業)</a>”</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://blog.mathieui.net/this-is-not-the-future.html">This is not the future</a>” by mathieui</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://www.cec-o-matic.com">HDMI-CEC tool</a>”</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="http://mrom.lemouel.io">MROM: Analogue Pocket ROM tool</a>” by lemouel</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://flak.tedunangst.com/post/async-dns">Async DNS</a>” by tedu</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://thewhitepages.net/p/the-potluck-manifesto">Potluck manifesto</a>” by Garrett Bucks</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://legendsoflocalization.com/articles/japanese-ellipsis-usage">Japanese ellipsis in English translations</a>”</td></tr>
 <tr><td title="Social Media">📱</td><td>“<a href="https://berjon.com/fascintern-media">Fascintern media</a>” by Robin Berjon</td></tr>
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://stacktower.io">Stacking dependencies like XKCD</a>” by Matthias Huels</td></tr>
 <tr><td title="Social Media">📱</td><td>“<a href="https://spui25.nl/programma/we-can-change-the-defaults-building-networks-of-consent-and-spaces-of-joy-in-the-ruins-of-social-media">Social media: we can change the defaults</a>” by Christine Lemmer-Webber</td></tr>
 <tr><td title="Life">🏞️</td><td>“<a href="https://blog.calebjay.com/posts/dont-download-apps">Don't download apps</a>” by Caleb Jay</td></tr>
 <tr><td title="Life">🏞️</td><td>“<a href="https://adrianhoward.com/posts/bad-people-do-the-thing-you-love">Bad people do the thing you love</a>” by Adrian Howard</td></tr>
@@ -25,6 +33,7 @@
 <tr><td title="Security">🔒</td><td>“<a href="https://blog.yossarian.net/2025/11/21/We-should-all-be-using-dependency-cooldowns">Dependency cooldowns</a>” by William Woodruff</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://ochagavia.nl/blog/towards-interplanetary-quic-traffic">Interplanetary QUIC</a>” by Adolfo Ochagavía</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://tonsky.me/blog/needy-programs">Needy programs</a>” by Nikita Prokopov</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://www.amoses.dev/blog/wifi-location">It's your fault my laptop knows where I am</a>”</td></tr>
 <tr><td title="Social Media">📱</td><td>“<a href="https://unpublishablepapers.substack.com/p/where-do-the-children-play">Where do the children play?</a>” by Eli Stark-Elster</td></tr>
 <tr><td title="Toys and Art">🖼️</td><td>“<a href="https://2earth.github.io/website/20250202.html">Drawing celtic knots with Python</a>” by Tom Ruddell</td></tr>
 <tr><td title="Life">🏞️</td><td>“<a href="https://filiph.github.io/unsure">Uncertainty calculator</a>” by Filip Hráček</td></tr>
