--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -16,6 +16,14 @@
 </p>
 <p id="#sentinel">
 <table style="table-layout: fixed">
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://alexwlchan.net/til/2025/ignore-ai-scaled-videos">Ignore AI-upscaled YouTube videos with yt-dlp</a>” by Alex Chan</td></tr>
+<tr><td title="Social Media">📱</td><td>“<a href="https://www.wrecka.ge/landslide-a-ghost-story">Landslide; a ghost story</a>” by Erin Kissane</td></tr>
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://hugovk.dev/blog/2025/and-now">And now for something completely different</a>” by Hugo van Kemenade</td></tr>
+<tr><td title="Security">🔒</td><td>“<a href="https://enzom.dev/b/passkeys">What I learned about passkeys</a>”</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://www.schneier.com/blog/archives/2025/12/deliberate-internet-shutdowns.html">Deliberate internet shutdowns</a>” by Bruce Schneier</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://pythonbynight.com/talks/ai-modest-proposal">A(i) Modest Proposal</a>” by Mario Munoz</td></tr>
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://www.pigenpalace.com/dogspinner">DOGSPINNER</a>”</td></tr>
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://alexwlchan.net/2025/truchet-tiles">Truchet tiles in SVG</a>” by Alex Chan</td></tr>
 <tr><td title="Toys and Art">🖼️</td><td>“<a href="https://www.citymilk.net">Japanese milk packaging (漂流乳業)</a>”</td></tr>
 <tr><td title="Life">🏞️</td><td>“<a href="https://blog.mathieui.net/this-is-not-the-future.html">This is not the future</a>” by mathieui</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://www.cec-o-matic.com">HDMI-CEC tool</a>”</td></tr>
@@ -345,8 +353,8 @@
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://gamebanana.com/mods/544238">Super Mario 64 in Sonic Adventure DX</a>” by Sora</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.youtube.com/watch?v=1-LWI2tGfhQ">FlippyDrive for the GameCube</a>” by Macho Nacho</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://fabiensanglard.net/snes_video/index.html">Super Nintendo Video System</a>” by Fabien Sanglard</td></tr>
-<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://youtube.com/watch?si=BDytOgheHFncVBK9&v=tfS9SYPT-jw">Super Paper Mario's design</a>” by Kirbyster</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://youtu.be/nviIKTywuYU?si=mgFOhNBRMCTAIwOU">A video about Melee</a>” by AsumSaus</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://youtube.com/watch?si=BDytOgheHFncVBK9&v=tfS9SYPT-jw">Super Paper Mario's design</a>” by Kirbyster</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://orangegb.com/orangefm">ORANGE FM, Game Boy cartridge for FM Radio</a>” by Evan Barger</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="http://www.blarg.ca/2021/02/15/using-a-gamecube-ascii-keyboard-controller-with-libogc">Gamecube ASCII keyboard controller and libogc</a>” by Gered King</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.youtube.com/watch?v=699HVbOKNtc">GameCube, Wii, Wii U, and PC connected via Broadband Adapter</a>” by Good Vibes Gaming</td></tr>
