--- a/app/static/style.css
+++ b/app/static/style.css
@@ -42,8 +42,8 @@ body {
   margin: 0;
   padding: 0;
   font-weight: 400;
-  font-size: 1.3em;
-  line-height: 1.6;
+  font-size: 20px;
+  line-height: 30px;
   -webkit-overflow-scrolling: touch;
   -webkit-text-size-adjust: 100%;
   text-rendering: optimizelegibility;
