--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -16,6 +16,12 @@
 </p>
 <p id="#sentinel">
 <table style="table-layout: fixed">
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://hiddenpalace.org/News/One_Bad_Ass_Hedgehog_-_Shadow_the_Hedgehog#Demystifying_DVDs">Demystifying DVDs with Shadow the Hedgehog</a>”</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://en.andros.dev/blog/7b1b607b/doom-in-django-testing-the-limits-of-liveview-at-600000-divssegundo">DOOM in Django LiveView</a>” by Andros Fenollosa</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://discourse.llvm.org/t/rfc-llvm-ai-tool-policy-start-small-no-slop/88476">LLVM AI policy: start small, no slop</a>”</td></tr>
+<tr><td title="Security">🔒</td><td>“<a href="https://00f.net/2025/12/30/libsodium-vulnerability">The first vulnerability in libsodium</a>”</td></tr>
+<tr><td title="Social Media">📱</td><td>“<a href="https://ploum.net/2025-12-15-communication-entertainment.html">Losing communication for entertainment</a>” by Lionel Dricot</td></tr>
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://zw.swerdlow.dev">Drawing with zero-width characters</a>” by Benjamin Swerdlow</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://alexwlchan.net/til/2025/ignore-ai-scaled-videos">Ignore AI-upscaled YouTube videos with yt-dlp</a>” by Alex Chan</td></tr>
 <tr><td title="Social Media">📱</td><td>“<a href="https://www.wrecka.ge/landslide-a-ghost-story">Landslide; a ghost story</a>” by Erin Kissane</td></tr>
 <tr><td title="Toys and Art">🖼️</td><td>“<a href="https://hugovk.dev/blog/2025/and-now">And now for something completely different</a>” by Hugo van Kemenade</td></tr>
