--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -16,6 +16,8 @@
 </p>
 <p id="#sentinel">
 <table style="table-layout: fixed">
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://blog.glyph.im/2026/01/the-next-thing-will-not-be-big.html">The next thing will not be big</a>” by Glyph</td></tr>
+<tr><td title="Social Media">📱</td><td>“<a href="https://henry.codes/writing/a-website-to-destroy-all-websites">A website to end all websites</a>” by Henry Desroches</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://hiddenpalace.org/News/One_Bad_Ass_Hedgehog_-_Shadow_the_Hedgehog#Demystifying_DVDs">Demystifying DVDs with Shadow the Hedgehog</a>”</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://en.andros.dev/blog/7b1b607b/doom-in-django-testing-the-limits-of-liveview-at-600000-divssegundo">DOOM in Django LiveView</a>” by Andros Fenollosa</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://discourse.llvm.org/t/rfc-llvm-ai-tool-policy-start-small-no-slop/88476">LLVM AI policy: start small, no slop</a>”</td></tr>
